Updated papers as well as journal submission

--- a/TalksPublications/MidcurveNN_CADConf2021/CADandA_Paper_MidcurveNN.bib
+++ b/TalksPublications/MidcurveNN_CADConf2021/CADandA_Paper_MidcurveNN.bib
@@ -1,3 +1,26 @@
+@article{Ramanathan04,
+author = {M. Ramanathan and B. Gurumoorthy},
+title = {Generating the Mid-Surface of a Solid using 2D MAT of its Faces},
+journal = {Computer-Aided Design and Applications},
+volume = {1},
+number = {1-4},
+pages = {665-674},
+year  = {2004},
+publisher = {Taylor & Francis},
+doi = {10.1080/16864360.2004.10738312},
+URL = { https://doi.org/10.1080/16864360.2004.10738312},
+eprint = {https://doi.org/10.1080/16864360.2004.10738312}
+}
+
+@InProceedings{Panichev_2019_CVPR_Workshops,
+author = {Panichev, Oleg and Voloshyna, Alona},
+title = {U-Net Based Convolutional Neural Network for Skeleton Extraction},
+booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},
+month = {June},
+year = {2019}
+}
+
+
 @misc{shen2016object,
       title={Object Skeleton Extraction in Natural Images by Fusing Scale-associated Deep Side Outputs}, 
       author={Wei Shen and Kai Zhao and Yuan Jiang and Yan Wang and Zhijiang Zhang and Xiang Bai},
