Added updated template

--- a/TalksPublications/MidcurveNN_LaTeX/Main_Seminar_MidcurveNN_CheatSheet.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/Main_Seminar_MidcurveNN_CheatSheet.tex
@@ -5,7 +5,7 @@
 
 
 \begin{center}
-\Large{\textbf{Deep Learning for Geometric Algorithms\\ Midcurve, a case study \\ Yogesh Kulkarni}}  
+\Large{\textbf{Deep Learning for Geometric Algorithms: Midcurve, a case study \\ Yogesh Haribhau Kulkarni}}  
 \end{center}
 
 \begin{multicols}{2}
