--- a/TalksPublications/MidcurveNN_LaTeX/template_presentation.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/template_presentation.tex
@@ -2,17 +2,15 @@
 \usepackage{adjustbox}
 \usepackage{lmodern}
 \usepackage{booktabs}
-%\usepackage{enumitem}
 \usepackage[english]{babel}
 \usepackage{tikz-qtree} 
-%\usepackage{listings}
-%\usepackage{flashmovie}
 \usepackage{media9}
 \usepackage{makecell}
- \usepackage{multimedia}
- \usepackage{listings}
- \usepackage{color}
- % \usepackage{helvet}
+\usepackage{multimedia}
+\usepackage{listings}
+\usepackage{color}
+\usepackage{algorithm,algorithmic}
+
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
@@ -30,7 +28,7 @@
   captionpos=b,                    % sets the caption-position to bottom
   commentstyle=\color{mygreen},    % comment style
   deletekeywords={...},            % if you want to delete keywords from the given language
-  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  %escapeinside={\*}{*)},          % if you want to add LaTeX within your code
   extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
   frame=single,	                   % adds a frame around the code
   keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
@@ -52,37 +50,8 @@
   aboveskip=10pt,	   			   % Space before listing 
   belowskip=-15pt,	   			   % Space after listing  
   xleftmargin=.02\linewidth,  
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
 }
 
-
-% \definecolor{codegreen}{rgb}{0,0.6,0}
-% \definecolor{codegray}{rgb}{0.5,0.5,0.5}
-% \definecolor{codepurple}{rgb}{0.58,0,0.82}
-% %\definecolor{backcolour}{rgb}{0.95,0.95,0.92} % faint postman color
-% \definecolor{backcolour}{rgb}{.914, .89, .957} % pale purple
-% %\lstset{basicstyle=\footnotesize\ttfamily}
-
-% \lstdefinestyle{mystyle}{
-    % backgroundcolor=\color{backcolour},   
-    % commentstyle=\color{codegreen},
-    % keywordstyle=\color{magenta},
-    % numberstyle=\tiny\color{codegray},
-    % stringstyle=\color{codepurple},
-    % basicstyle= \tiny\ttfamily %\scriptsize\ttfamily, %\footnotesize,  % the size of the fonts that are used for the code
-    % breakatwhitespace=true,  % sets if automatic breaks should only happen at whitespace        
-    % breaklines=true, % sets automatic line breaking   
-    % linewidth=\linewidth,	
-    % captionpos=b,                    
-    % keepspaces=true,% keeps spaces in text, useful for keeping indentation                
-% %    numbers=left,                  
-    % numbers=none,  
-% %    numbersep=5pt,                  
-    % showspaces=false,                
-    % showstringspaces=false,
-    % showtabs=false,                  
-    % tabsize=2
-% }
 \lstset{style=mystyle}
 
 \usetheme{Warsaw}
@@ -110,7 +79,6 @@
 \setbeamercolor{block title}{fg=white, bg=nyupurple}
 \setbeamercolor{section title}{fg=white, bg=nyupurple}
 \setbeamercolor{subsection title}{fg=white, bg=lightnyupurple}
-%\setbeamercolor{frametitle}{fg=white, bg=lightnyupurple}  % Gives gradient in the frame title bar
 \setbeamertemplate{frametitle}[default][colsep=-4bp,rounded=false,shadow=false] % disable gradient
 
 \setbeamerfont{frametitle}{size=\large}
@@ -137,28 +105,21 @@
 \setbeamertemplate{enumerate subsubitem}{\insertenumlabel.\insertsubenumlabel.\insertsubsubenumlabel}
 \setbeamertemplate{enumerate mini template}{\insertenumlabel}
 \setbeamertemplate{mini frames}{}
-%\setbeamertemplate{itemize/enumerate subbody begin}{\vspace{1cm}}
-%\setbeamertemplate{itemize/enumerate subbody end}{\vspace{1cm}}
 
-% TOC at start of a Section or a Subsection
-\AtBeginSection[] { 
-  \begin{frame}[plain] 
-    \frametitle{Agenda} 
-    \tableofcontents[currentsection] 
-  \end{frame} 
-  \addtocounter{framenumber}{-1} 
-} 
-
-%\AtBeginSubsection[] { 
-%  \begin{frame}[plain] 
-%   \frametitle{Agenda} 
-%    \tableofcontents[currentsubsection] 
-%    \addtocounter{framenumber}{-1} 
-%  \end{frame} 
-%} 
-
-
-%\logo{\includegraphics[width=2cm,keepaspectratio]{images/yati_logo.pdf}}
-\author[Yogesh H Kulkarni]{Yogesh Kulkarni} 
-
+\logo{\includegraphics[width=6mm,keepaspectratio]{images/logo_yhk.png}}
+\author[YHK]{Yogesh Haribhau Kulkarni} 
+\date{}
 \newcommand{\code}[1]{\par\vskip0pt plus 1filll \footnotesize Code:~\itshape#1}
+
+\setbeamertemplate{footline}{%
+  \leavevmode%
+  \hbox{\begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm ,rightskip=.15cm plus1fill]{title in head/foot}%
+    \usebeamerfont{title in head/foot}\inserttitle
+  \end{beamercolorbox}%
+  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.15cm plus1fil]{title in head/foot}%
+    \usebeamerfont{title in head/foot}\hfill\insertframenumber\,/\,\inserttotalframenumber
+  \end{beamercolorbox}}%
+  \vskip0pt%
+}
+
+
